--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,11 @@ header{
   background-color:rgb(35, 39, 49);
   height:50px;
   padding:30px 0;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
+
+
 
 
 }
@@ -22,12 +27,13 @@ header{
   width:120px;
   height:25px;
   float: left;
+  margin-left: 20px;
 
 }
 
 
 .container{
-width:1060px;
+width:100%;
 margin:0 auto;
 
 }
@@ -148,6 +154,11 @@ margin-right:30px;
 
 }
 
+.featurespart{
+  display: flex;
+
+}
+
 .feature{
   width:240px;
   float: left;
@@ -179,7 +190,6 @@ margin-right:30px;
 .description1{
   height: 790px;
   background-color: rgb(243, 244, 248);
-  padding-right:90px;
   padding-bottom: 90px;
   position: relative;
 }
@@ -354,7 +364,7 @@ margin:0;
   width:230px;
   height: 220px;
   position:absolute;
-  right:470px;
+  right:490px;
   bottom: -80px;
 
 }
@@ -449,13 +459,14 @@ margin:0;
   padding: 10px 35px;
   border-radius: 30px;
   font-size: 12px;
+  position: absolute;
+  left:530px;
 
 }
 
 .NOW-NEWS a{
   display: block;
-  position: absolute;
-  left:455px;
+
 
 
 }
@@ -542,14 +553,17 @@ input::placeholder{
   font-size: 15px;
   border: rgb(238, 238, 238) 0.05px solid;
   background-color: #FF5274;
-  display: block;
-  position: absolute;
-  left:333px;
 
+}
+
+.box-free{
+  display: flex;
+  justify-content: center;
 }
 
 .form a{
   color:white;
+
 }
 
 .box:hover{
@@ -561,6 +575,9 @@ footer{
   background-color:rgb(35, 39, 49);
   height: 250px;
   padding-top: 30px;
+
+
+
 }
 
 
